# X

./: README.md
basics/: README.md
basics/linux/: README.md
basics/linux/desktop/gnome/: README.md  script.sh
basics/linux/terminal/alias/: README.md  githubalias.sh
basics/linux/terminal/gnome/: xtropicalneon.sh
basics/linux/terminal/installations/: README.md
basics/linux/terminal/monitorization/: moninstall.sh
basics/linux/terminal/nvidia/: script.sh
basics/linux/terminal/scripts/: README.md
basics/windows/: README.md
basics/windows/dotfiles/windhawk/: exclusions.conf  taskbariconsize.json  taskbarlabels.json  taskbarstyle.json  w11taskbarmenustyles.json
basics/windows/yasb/: README.md
basics/windows/yasb/config/: config.yaml  styles.css
general/: README.md
general/AndroidStudio/xscriptor-theme/: README.md
general/Jetbrains/xscriptor-theme/: README.md
general/custom-tools/xfetch/: .gitignore  Cargo.toml  LINUX_TROUBLESHOOTING.md  README.md  install.ps1  install.sh  test-linux-build.sh  uninstall.ps1
general/custom-tools/xfetch/src/: logos.rs  main.rs  system_info.rs
general/gnome-terminal/xtropicalneon/: README.md
general/kitty/themes/xdracula/: README.md  kitty.conf
general/kitty/themes/xsccriptor-theme/: install.sh
general/obsidian/themes/xscriptor-theme/: README.md  manifest.json  theme.css
general/powershell/themes/: README.md
general/powershell/themes/xtropicalneon/: README.md
general/terminal/: README.md
general/terminal/konsole/: README.md  Xscriptor.colorscheme  install.sh
general/terminal/powershell/: README.md
general/vscode/ui-mods/: README.md
general/vscodethemes/xscriptor-themes/: CHANGELOG.md  README.md  package.json  xscriptor-themes-0.0.3.vsix  xscriptor-themes-0.0.4.vsix
x/: script.sh  x.sh
x/fastfetch/3/: config.jsonc
x/fastfetch/4/: config.jsonc
x/zsh/: script.sh
(+39 files in other folders)
