[package]
name = "xfetch"
version = "0.1.0"
edition = "2024"
authors = ["xscriptor"]
description = "A system information tool on Rust"
license = "MIT"

[[bin]]
name = "xfetch"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
termcolor = "1.2"
clap = { version = "4.0", features = ["derive"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies.wmi]
version = "0.13"

[target.'cfg(windows)'.dependencies.netstat2]
version = "0.9"

[target.'cfg(windows)'.dependencies.local-ip-address]
version = "0.6"

[target.'cfg(windows)'.dependencies.public-ip]
version = "0.2"

[target.'cfg(windows)'.dependencies.mac_address]
version = "1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "processthreadsapi", "winnt", "winerror", "handleapi", "memoryapi", "pdh", "setupapi", "devguid"] }
windows = { version = "0.52", features = ["Win32_System_SystemInformation", "Win32_System_Registry", "Win32_NetworkManagement_IpHelper", "Win32_System_Power", "Win32_Graphics_Gdi", "Win32_UI_Shell"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"